Fix error in grammar for assignableExpression
Review URL: https://codereview.chromium.org//817723003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42553 260f80e4-7a28-3924-810f-c04153c831b5

--- a/docs/language/dartLangSpec.tex
+++ b/docs/language/dartLangSpec.tex
@@ -4644,7 +4644,7 @@ Of course, if assignable expressions always appeared {\em as} the left hand side
 
 \begin{grammar}
 
-{\bf assignableExpression:}primary (argument* assignableSelector)+;
+{\bf assignableExpression:}primary (arguments? assignableSelector)+;
       \SUPER{} assignableSelector;
       identifier
     .
